--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   },
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.5",
+    "@tiptap/pm": "^2.0.0-beta.220",
+    "@tiptap/react": "^2.0.0-beta.220",
+    "@tiptap/starter-kit": "^2.0.0-beta.220",
     "@types/node": "18.14.6",
     "@types/react-dom": "18.0.11",
     "eslint": "8.35.0",
